--- a/OpenMP/linear-algebra/kernels/2mm/Makefile
+++ b/OpenMP/linear-algebra/kernels/2mm/Makefile
@@ -23,7 +23,7 @@ LDFLAGS:=-lm -lcudart $(EXT_LDFLAGS)
 NVCFLAGS:=$(CXXFLAGS) $(NVOPT)
 NVLDFLAGS:=$(LDFLAGS) -lgomp
 
-SRCS:= $(EXERCISE) ../../../../common/polybench.c
+SRCS:= ../../../../common/polybench.c
 OBJS := $(SRCS:%=$(BUILD_DIR)/%.o) $(EXERCISE:%=$(BUILD_DIR)/%.o)
 EXE=$(EXERCISE:.cu=.exe)
 
