--- a/CUDA/Makefile
+++ b/CUDA/Makefile
@@ -1,12 +1,12 @@
--include ../../../utilities/options.mk
--include ../../../utilities/c2.mk
+#-include ../../../utilities/options.mk
+#-include ../../../utilities/c2.mk
 
 ifndef CUDA_HOME
 CUDA_HOME:=/usr/local/cuda
 endif
 
 ifndef EXERCISE
-EXERCISE=exercise1.cu
+EXERCISE=2mm-cuda-1.cu
 endif
 
 BUILD_DIR ?= ./build
@@ -15,19 +15,19 @@ NVCC=$(CUDA_HOME)/bin/nvcc
 CXX=g++
 
 OPT:=-O2 -g
-NVOPT:=-Xcompiler -fopenmp -lineinfo -arch=sm_53 --ptxas-options=-v --use_fast_math `pkg-config --cflags --libs opencv4`
+NVOPT:=-Xcompiler -fopenmp -lineinfo -arch=sm_53 --ptxas-options=-v --use_fast_math
 
-CXXFLAGS:=$(OPT) -I. $(EXT_CXXFLAGS)
+CXXFLAGS:=$(OPT) -I. $(EXT_CXXFLAGS) -I ../../../../common
 LDFLAGS:=-lm -lcudart $(EXT_LDFLAGS)
 
 NVCFLAGS:=$(CXXFLAGS) $(NVOPT)
 NVLDFLAGS:=$(LDFLAGS) -lgomp
 
-SRCS:= utils.c
+SRCS:= ../../../../common/polybench.c
 OBJS := $(SRCS:%=$(BUILD_DIR)/%.o) $(EXERCISE:%=$(BUILD_DIR)/%.o)
 EXE=$(EXERCISE:.cu=.exe)
 
-$(EXE):	$(OBJS)
+$(EXE): $(OBJS)
 	$(MKDIR_P) $(dir $@)
 	$(NVCC) $(NVCFLAGS) $(OBJS) -o $@ $(NVLDFLAGS)
 
