--- a/CUDA/Makefile
+++ b/CUDA/Makefile
@@ -1,5 +1,5 @@
--include ../../../utilities/options.mk
--include ../../../utilities/c2.mk
+#-include ../../../utilities/options.mk
+#-include ../../../utilities/c2.mk
 
 ifndef CUDA_HOME
 CUDA_HOME:=/usr/local/cuda
